2006-02-23  Richard Guenther  <rguenther@suse.de>

PR middle-end/26439
	* tree-ssa-structalias.c (find_func_aliases): Handle complex types
	like aggregate types.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@111389 138bc75d-0d04-0410-961f-82ee72b054a4